добавила стилевые файлы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page_body">
     <header class="main-header">
-      <a class="main-header__logo">
+      <a class="main-header__logo" href="index.html">
         <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
       </a>
       <nav class="main-nav">
@@ -34,8 +35,8 @@
       </nav>
     </header>
     <main class="main-catalog-container">
-      <section class="main-catalog-container__wrapper container">
-        <h1 class="main-catalog-container__title">Каталог товаров</h1>
+      <section class="main-catalog-container__wrapper container page-title">
+        <h1 class="main-catalog-container__title page-title__text">Каталог товаров</h1>
       </section>
       <section class="product-cards">
         <h2 class="visually-hidden">Карточки товаров</h2>
