--- a/source/form.html
+++ b/source/form.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="page_body">
+  <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
+      <a class="main-header__logo" href="index.html">
         <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
       </a>
       <nav class="main-nav">
@@ -34,8 +35,8 @@
       </nav>
     </header>
     <main class="main-form-container">
-      <section class="main-form-container__wrapper">
-        <h1 class="main-form-container__title">Вязание на заказ</h1>
+      <section class="main-form-container__wrapper page-title">
+        <h1 class="main-form-container__title page-title__text">Вязание на заказ</h1>
       </section>
       <section class="form container">
         <h2 class="visually-hidden">Форма заказа</h2>
@@ -43,96 +44,96 @@
           Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
         <form class="form__wrapper" action="https://echo.htmlacademy.ru" method="get">
-          <fieldset class="form__fieldset form-type">
-            <legend class="form-type__title">ТИП</legend>
-            <ul class="form-type__list">
-              <li class="form-type__item">
-                <label class="form-type__label">
-                  <input class="form-type__input" type="radio" name="accessory" value="accessory">
+          <fieldset class="form__type">
+            <h3 class="form__title">ТИП</h3>
+            <ul class="form__list form__list--type">
+              <li class="form__type-item">
+                <label class="form__type-label">
+                  <input class="form__type-input" type="radio" name="accessory" value="accessory">
                   Аксессуар для интерьера
                 </label>
-              </li>
-              <li class="form-type__item">
-                <label class="form-type__label">
-                  <input class="form-type__input" type="radio" name="toy" value="toy">
+            </li>
+              <li class="form__type-item">
+                <label class="form__type-label">
+                  <input class="form__type-input" type="radio" name="toy" value="toy">
                   Детская игрушка
                 </label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset form-color">
-            <legend class="form-color__title">ЦВет</legend>
-            <ul class="form-color__list">
-              <li class="form-color__item">
-                <label class="form-color__label">
-                  <input class="form-color__input" type="checkbox" name="white" checked>
-                  Белый
+          <fieldset class="form__color">
+            <h3 class="form__title">ЦВет</h3>
+            <ul class="form__list form__list--color">
+              <li class="form__color-item">
+                <label class="form__parametr">
+                  <input class="form__color-input" type="checkbox" name="white" checked>
+                    Белый
                 </label>
               </li>
-              <li class="form-color__item">
-                <label class="form-color__label">
-                  <input class="form-color__input" type="checkbox" name="grey" checked>
-                  Серый
+              <li class="form__color-item">
+                <label class="form__parametr">
+                  <input class="form__color-input" type="checkbox" name="grey" checked>
+                    Серый
                 </label>
               </li>
-              <li class="form-color__item">
-                <label class="form-color__label">
-                  <input class="form-color__input" type="checkbox" name="tiffany">
+              <li class="form__color-item">
+                <label class="form__parametr">
+                  <input class="form__color-input" type="checkbox" name="tiffany">
                   Тиффани
                 </label>
               </li>
-              <li class="form-color__item">
-                <label class="form-color__label">
-                  <input class="form-color__input" type="checkbox" name="black">
+              <li class="form__color-item">
+                <label class="form__parametr">
+                  <input class="form__color-input" type="checkbox" name="black">
                   Черный
                 </label>
               </li>
-              <li class="form-color__item">
-                <label class="form-color__label">
-                  <input class="form-color__input" type="checkbox" name="pink">
+              <li class="form__color-item">
+                <label class="form__parametr">
+                  <input class="form__color-input" type="checkbox" name="pink">
                   Розовый
                 </label>
               </li>
-              <li class="form-color__item">
-                <label class="form-color__label">
-                  <input class="form-color__input" type="checkbox" name="orange">
+              <li class="form__color-item">
+                <label class="form__parametr">
+                  <input class="form__color-input" type="checkbox" name="orange">
                   Оранжевый
                 </label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset form-name">
-            <legend class="form-name__title">ФИО</legend>
-            <ul class="form-name__list">
-              <li class="form-name__item">
-                <label class="form-name__label" for="form-name__input--name">Имя:</label>
-                <input class="form-name__input form-name__input--name" type="text" id="form-name__input--name" name="form-name__input--name" placeholder="Введите ваше имя*" required>
+          <fieldset class="form__name">
+            <h3 class="form__title">ФИО</h3>
+            <ul class="form__list form__list--name">
+              <li class="form__name-item">
+                <label class="form__parametr" for="form-name__input--name">Имя:</label>
+                <input class="form__name-input form__name-input--name" type="text" id="form-name__input--name" name="form-name__input--name" placeholder="Введите ваше имя*" required>
               </li>
-              <li class="form-name__item">
-                <label class="form-name__label" for="form-name__input--surname">Фамилия:</label>
-                <input class="form-name__input form-name__input--surname" type="text" id="form-name__input--surname" name="form-name__input--surname" placeholder="Укажите фамилию*" required>
+              <li class="form__name-item">
+                <label class="form__parametr" for="form-name__input--surname">Фамилия:</label>
+                <input class="form__name-input form__name-input--surname" type="text" id="form-name__input--surname" name="form-name__input--surname" placeholder="Укажите фамилию*" required>
               </li>
-              <li class="form-name__item">
-                <label class="form-name__label" for="form-name__input--patronymic">Отчество:</label>
-                <input class="form-name__input form-name__input--patronymic" type="text" id="form-name__input--patronymic" name="form-name__input--patronymic" placeholder="Отчество, если желаете">
+              <li class="form__name-item">
+                <label class="form__parametr" for="form-name__input--patronymic">Отчество:</label>
+                <input class="form__name-input form__name-input--patronymic" type="text" id="form-name__input--patronymic" name="form-name__input--patronymic" placeholder="Отчество, если желаете">
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset form-phone">
-            <legend class="form-phone__title">тел</legend>
-            <input class="form-phone__input" type="text" id="phone" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+          <fieldset class="form__phone">
+            <h3 class="form__title">тел</h3>
+            <input class="form__phone-input" type="text" id="phone" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
           </fieldset>
-          <fieldset class="form__fieldset form-email">
-            <legend class="form-email__title">E-mail</legend>
-            <input class="form-email__input" type="email" id="email" name="email" placeholder="Ваш Email*">
+          <fieldset class="form__email">
+            <h3 class="form__title">E-mail</h3>
+            <input class="form__email-input" type="email" id="email" name="email" placeholder="Ваш Email*">
           </fieldset>
-          <fieldset class="form__fieldset form-info">
-            <span class="form-info__title">Доп</span>
-            <textarea class="form-info__text" id="info" name="info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          <fieldset class="form__info">
+            <h3 class="form__title">Доп</h3>
+            <textarea class="form__info-text" id="info" name="info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
-          <div class="form-button__container">
-            <p class="form-button__text">*Поля обязательны для заполнения</p>
-            <button class="form-button__buton button" type="button">ОТПРАВИТЬ ЗАКАЗ</button>
+          <div class="form__buttons">
+            <p class="form__text">*Поля обязательны для заполнения</p>
+            <button class="form__button button" type="button">ОТПРАВИТЬ ЗАКАЗ</button>
           </div>
         </form>
       </section>
