--- a/source/index.html
+++ b/source/index.html
@@ -3,78 +3,81 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="page_body">
+  <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
-        <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="catalog.html">Каталог товаров</a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">Вязание на заказ</a>
-            </li>
-          </ul>
-          <ul class="main-nav__list user-list">
-            <li class="user-list__item">
-              <a href="#">Поиск по сайту</a>
-            </li>
-            <li class="user-list__item">
-              <a href="#">Корзина: пока пуста</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="main-header__wrapper">
+        <a class="main-header__logo">
+          <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
+                <a href="catalog.html">Каталог товаров</a>
+              </li>
+              <li class="site-list__item">
+                <a href="form.html">Вязание на заказ</a>
+              </li>
+            </ul>
+            <ul class="main-nav__list user-list">
+              <li class="user-list__item">
+                <a href="#">Поиск по сайту</a>
+              </li>
+              <li class="user-list__item">
+                <a href="#">Корзина: пока пуста</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main class="main-container">
       <h1 class="visually-hidden">Интернет-магазин игрушек ручной работы Мишка</h1>
       <section class="main">
         <h2 class="main__title">Милые штуки ручной работы для дома</h2>
         <ul class="main__list">
-          <li class="main_item">
-            <a class="main__link">
+          <li class="main__item main__item--interior">
+            <a class="main__link" href="#">
               Предметы интерьера
             </a>
           </li>
-          <li class="main__item">
-            <a class="main__link">
+          <li class="main__item main__item--toys">
+            <a class="main__link" href="#">
               Детские игрушки
             </a>
           </li>
         </ul>
       </section>
-      <section class="product container">
-        <h2 class="product__title">Вязаные корзинки</h2>
-        <p class="product__subtitle">ТОВАР НЕДЕЛИ</p>
-        <div class="product__description">
+      <section class="popular-product container">
+        <h2 class="popular-product__title title">Вязаные корзинки</h2>
+        <p class="popular-product__subtitle">ТОВАР НЕДЕЛИ</p>
+        <p class="popular-product__description">
           Экологически чистая пряжа,
           ручная работа. Доступны в шести расцветках и трёх размерах.
+        </p>
+        <div class="popular-product__characteristics">
+          <dt class="popular-product__parametr">Цвет:</dt>
+          <dd class="popular-product__value">тиффани/серый</dd>
         </div>
-        <div class="product__characteristics">
-          <dt class="product__parametr">Цвет:</dt>
-          <dd class="product__value">тиффани/серый</dd>
+        <div class="popular-product__characteristics">
+          <dt class="popular-product__parametr">Диаметр:</dt>
+          <dd class="popular-product__value">25 см</dd>
         </div>
-        <div class="product__characteristics">
-          <dt class="product__parametr">Диаметр:</dt>
-          <dd class="product__value">25 см</dd>
+        <div class="popular-product__characteristics">
+          <dt class="popular-product__parametr">Высота:</dt>
+          <dd class="popular-product__value">15 см</dd>
         </div>
-        <div class="product__characteristics">
-          <dt class="product__parametr">Высота:</dt>
-          <dd class="product__value">15 см</dd>
-        </div>
-        <p class="product__price">Цена: 990 руб.</p>
-        <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+        <span class="popular-product__price">Цена: 990 руб.</span>
+        <a class="popular-product__button button" href="#">ЗАКАЗАТЬ</a>
       </section>
       <section class="advantages container">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <p class="advantages__title">Коротко о нас:</p>
+        <p class="advantages__title title">Коротко о нас:</p>
         <ul class="advantages__list">
           <li class="advantages__item">Экологически чистые материалы</li>
           <li class="advantages__item">Скандинавский стиль по российской цене</li>
@@ -85,22 +88,24 @@
         </ul>
       </section>
       <section class="reviews container">
-        <h2 class="reviews__title">Отзывы</h2>
-        <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
+        <h2 class="reviews__title title">Отзывы</h2>
+        <blockquote class="reviews__container">
+          <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
           у популярных инстамамочек.
           В отчаянии, я накупила аксессуаров и игрушек в Мишке,
           и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+          </p>
+          <cite class="reviews__author">Анастасия Красильникова</cite>
+          <span class="reviews__login">@misssssiskras</span>
         </blockquote>
-        <p class="reviews__author">Анастасия Красильникова</p>
-        <p class="reviews__login">@misssssiskras</p>
-        <p class="reviews__toggles">
+        <div class="reviews__toggles">
           <button class="reviews__prev" type="button">предыдущий отзыв</button>
           <button class="reviews__next" type="button">следующий отзыв</button>
-        </p>
+        </div>
         <button class="reviews__button button" type="button">Написать</button>
       </section>
       <section class="contacts container">
-        <h2 class="contacts__title">Контакты</h2>
+        <h2 class="contacts__title title">Контакты</h2>
         <div class="contacts__info">
           <dt class="contacts__name">e-mail:</dt>
           <dd class="contacts__description">
@@ -111,9 +116,9 @@
         </div>
         <div class="contacts__info">
           <dt class="contacts__name">адрес:</dt>
-          <dd class="contacts__description">г. Санкт-Петербург ул. Большая Конюшенная д. 19/8, офис 101</dd>
+          <dd class="contacts__description">г. Санкт-Петербург ул. Большая Конюшенная д. 19/8, офис 101</dd>
         </div>
-        <button class="contacts__button button">Напишите нам</button>
+        <a class="contacts__button button" href="#">Напишите нам</a>
       </section>
     </main>
     <footer class="main-footer">
