Сетки на разных версиях экрана

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,19 +2,20 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Мишка</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page_body">
     <header class="main-header">
-      <a class="main-header__logo" href="index.html">
-        <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <div class="main-nav__wrapper">
+      <div class="main-header__wrapper container">
+        <a class="main-header__logo" href="index.html">
+          <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a href="catalog.html">Каталог товаров</a>
@@ -23,16 +24,33 @@
               <a href="form.html">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__list user-list">
+        </nav>
+        <div class="user-list">
+          <ul class="user-list__container">
             <li class="user-list__item">
-              <a href="#">Поиск по сайту</a>
+              <a href="#">
+                <svg class="user-list__icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 18 18"><path fill="#000" d="m17.693 16.057-3.477-3.477c1.023-1.33 1.534-2.966 1.534-4.705C15.75 3.477 12.273 0 7.875 0S0 3.477 0 7.875s3.477 7.875 7.875 7.875c1.739 0 3.375-.614 4.704-1.534l3.478 3.477c.204.205.409.307.818.307.614 0 1.125-.511 1.125-1.125 0-.204-.102-.511-.307-.818ZM2.25 7.875c0-3.068 2.557-5.625 5.625-5.625S13.5 4.807 13.5 7.875 10.943 13.5 7.875 13.5 2.25 10.943 2.25 7.875Z" opacity=".2"/>
+                </svg>
+                <span class="user-list__text">Поиск по сайту</span>
+              </a>
             </li>
             <li class="user-list__item">
               <a href="#">Корзина: пока пуста</a>
             </li>
           </ul>
         </div>
-      </nav>
+        <div class="user-sale">
+          <ul class="user-sale__list">
+            <li class="user-sale__item">
+              <a href="#">Новые поступления</a>
+            </li>
+            <li class="user-sale__item">
+              <a href="#">Распродажа</a>
+            </li>
+          </ul>
+        </div>
+        <span class="main-header__text">Бесплатная доставка по России</span>
+      </div>
     </header>
     <main class="main-catalog-container">
       <section class="main-catalog-container__wrapper container page-title">
@@ -40,7 +58,7 @@
       </section>
       <section class="product-cards">
         <h2 class="visually-hidden">Карточки товаров</h2>
-        <ul class="product-cards__list">
+        <ul class="product-cards__list container">
           <li class="product-cards__item">
             <a class="product-cards__link">
               <h3 class="product-cards__title">Зайчик-попрыгайчик</h3>
@@ -86,7 +104,10 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper">
+      <div class="main-footer__wrapper container">
+        <a class="main-footer__logo" href="index.html">
+          <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
+        </a>
         <div class="main-footer__social social">
           <ul class="social__list">
             <li class="social__item">
