--- a/source/index.html
+++ b/source/index.html
@@ -2,12 +2,13 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Мишка</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="main-header">
-      <div class="main-header__wrapper">
+      <div class="main-header__wrapper container">
         <a class="main-header__logo">
           <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
         </a>
@@ -15,31 +16,48 @@
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a href="catalog.html">Каталог товаров</a>
-              </li>
-              <li class="site-list__item">
-                <a href="form.html">Вязание на заказ</a>
-              </li>
-            </ul>
-            <ul class="main-nav__list user-list">
-              <li class="user-list__item">
-                <a href="#">Поиск по сайту</a>
-              </li>
-              <li class="user-list__item">
-                <a href="#">Корзина: пока пуста</a>
-              </li>
-            </ul>
-          </div>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Вязание на заказ</a>
+            </li>
+          </ul>
         </nav>
+        <div class="user-list">
+          <ul class="user-list__container">
+            <li class="user-list__item">
+              <a href="#">
+                <svg class="user-list__icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 18 18"><path fill="#000" d="m17.693 16.057-3.477-3.477c1.023-1.33 1.534-2.966 1.534-4.705C15.75 3.477 12.273 0 7.875 0S0 3.477 0 7.875s3.477 7.875 7.875 7.875c1.739 0 3.375-.614 4.704-1.534l3.478 3.477c.204.205.409.307.818.307.614 0 1.125-.511 1.125-1.125 0-.204-.102-.511-.307-.818ZM2.25 7.875c0-3.068 2.557-5.625 5.625-5.625S13.5 4.807 13.5 7.875 10.943 13.5 7.875 13.5 2.25 10.943 2.25 7.875Z" opacity=".2"/>
+                </svg>
+                <span class="user-list__text">Поиск по сайту</span>
+              </a>
+            </li>
+            <li class="user-list__item">
+              <a href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+        </div>
+        <div class="user-sale">
+          <ul class="user-sale__list">
+            <li class="user-sale__item">
+              <a href="#">Новые поступления</a>
+            </li>
+            <li class="user-sale__item">
+              <a href="#">Распродажа</a>
+            </li>
+          </ul>
+        </div>
+        <span class="main-header__text">Бесплатная доставка по России</span>
       </div>
     </header>
     <main class="main-container">
       <h1 class="visually-hidden">Интернет-магазин игрушек ручной работы Мишка</h1>
-      <section class="main">
-        <h2 class="main__title">Милые штуки ручной работы для дома</h2>
+      <section class="main container">
+        <div class="main__image-wrapper">
+          <h2 class="main__title">Милые штуки ручной работы для дома</h2>
+        </div>
         <ul class="main__list">
           <li class="main__item main__item--interior">
             <a class="main__link" href="#">
@@ -54,26 +72,30 @@
         </ul>
       </section>
       <section class="popular-product container">
-        <h2 class="popular-product__title title">Вязаные корзинки</h2>
-        <p class="popular-product__subtitle">ТОВАР НЕДЕЛИ</p>
-        <p class="popular-product__description">
-          Экологически чистая пряжа,
-          ручная работа. Доступны в шести расцветках и трёх размерах.
-        </p>
-        <div class="popular-product__characteristics">
-          <dt class="popular-product__parametr">Цвет:</dt>
-          <dd class="popular-product__value">тиффани/серый</dd>
+        <div class="popular-product__wrapper">
+          <h2 class="popular-product__title title">Вязаные корзинки</h2>
+          <p class="popular-product__subtitle">ТОВАР НЕДЕЛИ</p>
         </div>
-        <div class="popular-product__characteristics">
-          <dt class="popular-product__parametr">Диаметр:</dt>
-          <dd class="popular-product__value">25 см</dd>
+        <div class="popular-product__container">
+          <p class="popular-product__description">
+            Экологически чистая пряжа,
+            ручная работа. Доступны в шести расцветках и трёх размерах.
+          </p>
+          <ul class="popular-product__characteristics">
+            <li class="popular-product__parametr">Цвет:</li>
+            <li class="popular-product__value">тиффани/серый</li>
+          </ul>
+          <ul class="popular-product__characteristics">
+            <li class="popular-product__parametr">Диаметр:</li>
+            <li class="popular-product__value">25 см</li>
+          </ul>
+          <ul class="popular-product__characteristics">
+            <li class="popular-product__parametr">Высота:</li>
+            <li class="popular-product__value">15 см</li>
+          </ul>
+          <span class="popular-product__price">Цена: 990 руб.</span>
+          <a class="popular-product__button button" href="#">ЗАКАЗАТЬ</a>
         </div>
-        <div class="popular-product__characteristics">
-          <dt class="popular-product__parametr">Высота:</dt>
-          <dd class="popular-product__value">15 см</dd>
-        </div>
-        <span class="popular-product__price">Цена: 990 руб.</span>
-        <a class="popular-product__button button" href="#">ЗАКАЗАТЬ</a>
       </section>
       <section class="advantages container">
         <h2 class="visually-hidden">Наши преимущества</h2>
@@ -106,23 +128,28 @@
       </section>
       <section class="contacts container">
         <h2 class="contacts__title title">Контакты</h2>
-        <div class="contacts__info">
-          <dt class="contacts__name">e-mail:</dt>
-          <dd class="contacts__description">
-            <a class="contacts__description-link" href="#">
-              info@mimimishkashop.ru
-            </a>
-          </dd>
-        </div>
-        <div class="contacts__info">
-          <dt class="contacts__name">адрес:</dt>
-          <dd class="contacts__description">г. Санкт-Петербург ул. Большая Конюшенная д. 19/8, офис 101</dd>
+        <div class="contacts__container">
+          <ul class="contacts__info">
+            <li class="contacts__name">e-mail:</li>
+            <li class="contacts__description">
+              <a class="contacts__description-link" href="#">
+                info@mimimishkashop.ru
+              </a>
+            </li>
+          </ul>
+          <ul class="contacts__info">
+            <li class="contacts__name">адрес:</li>
+            <li class="contacts__description">г. Санкт-Петербург ул. Большая Конюшенная д. 19/8, офис 101</li>
+          </ul>
         </div>
         <a class="contacts__button button" href="#">Напишите нам</a>
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper">
+      <div class="main-footer__wrapper container">
+        <a class="main-footer__logo">
+          <img src="img/logotype-phone.svg" width="86" height="35" alt="Интернет-магазин Мишка">
+        </a>
         <div class="main-footer__social social">
           <ul class="social__list">
             <li class="social__item">
