:heavy_check_mark: Сборка #6

--- a/6/index.html
+++ b/6/index.html
@@ -365,7 +365,7 @@
     </section>
     <div class="modal__overlay"></div>
     <script src="js/script.js"></script>
-    <!--<script src="js/map.js"></script>-->
+    <script src="js/map.js"></script>
     <script src="js/modal.js"></script>
   </body>
 </html>
