--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Мишка</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <svg style="display: none">
@@ -356,7 +356,7 @@
                   <label class="modal__label" for="size-l">L</label>
                 </li>
               </ul>
-             </fieldset>
+            </fieldset>
           </form>
           <button class="modal__button button" type="button">Добавить</button>
         </div>
