--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Мишка</title>
+    <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/svg/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/icon-180x180.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
@@ -257,7 +263,7 @@
         <div class="main-footer__social social">
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy" aria-label="ссылка на группу ВК htmlacademy">
                 <span class="visually-hidden">Мы в Вконтакте</span>
                 <svg class="social__icon" width="28" height="23">
                   <use xlink:href="#icon-vk"></use>
@@ -265,7 +271,7 @@
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="ссылка на ютюб-канал htmlacademy">
                 <span class="visually-hidden">Мы в Ютубе</span>
                 <svg class="social__icon" width="28" height="23">
                   <use xlink:href="#icon-youtube"></use>
@@ -273,7 +279,7 @@
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="ссылка на телеграм канал htmlacademy">
                 <span class="visually-hidden">Мы в Телеграме</span>
                 <svg class="social__icon" width="28" height="23">
                   <use xlink:href="#icon-telegram"></use>
@@ -284,7 +290,7 @@
         </div>
         <div class="main-footer__copyright copyright">
           <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="ссылка на сайт htmlacademy">
             <span class="visually-hidden"> HTML Academy</span>
             <svg class="copyright__icon" width="27" height="35">
               <use xlink:href="#icon-htmlacademy"></use>
