--- a/source/index.html
+++ b/source/index.html
@@ -180,7 +180,7 @@
           <div class="popular-product__price-wrapper">
             <span class="popular-product__price">Цена: 990 руб.</span>
             <div class="popular-product__button-wrapper">
-              <a class="popular-product__button button" href="#">ЗАКАЗАТЬ</a>
+              <a class="popular-product__button button modal-link" href="#">ЗАКАЗАТЬ</a>
             </div>
           </div>
           <div class="popular-product__image-wrapper">
