исправления после первой защиты по БЭМ

--- a/source/index.html
+++ b/source/index.html
@@ -153,7 +153,7 @@
           </li>
         </ul>
       </section>
-      <section class="popular-product container--section">
+      <section class="popular-product section-container">
         <div class="popular-product__title-wrapper container">
           <h2 class="popular-product__title title">Вязаные корзинки</h2>
           <p class="popular-product__subtitle">ТОВАР НЕДЕЛИ</p>
@@ -195,7 +195,7 @@
           </div>
         </div>
       </section>
-      <section class="advantages container--section">
+      <section class="advantages section-container">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <p class="advantages__title title container container--desktop">Коротко о нас:</p>
         <ul class="advantages__list container container--desktop">
@@ -237,7 +237,7 @@
           </li>
         </ul>
       </section>
-      <section class="reviews container container--desktop container--section">
+      <section class="reviews container container--desktop section-container">
         <h2 class="reviews__title title">Отзывы</h2>
         <blockquote class="reviews__container">
           <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
@@ -264,7 +264,7 @@
         </div>
         <button class="reviews__button button" type="button">Написать</button>
       </section>
-      <section class="contacts container--desktop container--section">
+      <section class="contacts section-container">
         <div class="contacts__wrapper">
           <h2 class="contacts__title title">Контакты</h2>
           <div class="contacts__container">
@@ -297,7 +297,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper container container--section">
+      <div class="main-footer__wrapper container section-container">
         <a class="main-footer__logo" href="index.html">
           <svg class="main-footer__icon" width="102" height="34">
             <use xlink:href="#footer-logo"></use>
