--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,7 +71,7 @@
                   <svg class="user-list__icon" width="18" height="18">
                     <use xlink:href="#icon-search"></use>
                   </svg>
-                  <span class="user-list__text--hidden">Поиск по сайту</span>
+                  <span class="user-list__text user-list__text--hidden">Поиск по сайту</span>
                 </a>
               </li>
               <li class="user-list__item">
@@ -104,7 +104,7 @@
       <section class="main-catalog-container__wrapper container page-title">
         <h1 class="main-catalog-container__title page-title__text">Каталог товаров</h1>
       </section>
-      <section class="product-cards container--section">
+      <section class="product-cards section-container">
         <h2 class="visually-hidden">Карточки товаров</h2>
         <ul class="product-cards__list container">
           <li class="product-cards__item">
@@ -184,7 +184,7 @@
           </li>
         </ul>
       </section>
-      <section class="product-process container container--section">
+      <section class="product-process container section-container">
         <div class="product-process__wrapper">
           <div class="product-process__title-wrapper">
             <svg class="product-process__icon" width="32" height="22">
@@ -211,7 +211,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper container container--section">
+      <div class="main-footer__wrapper container section-container">
         <a class="main-footer__logo" href="index.html">
           <svg class="main-footer__icon" width="102" height="34">
             <use xlink:href="#footer-logo"></use>
