--- a/source/form.html
+++ b/source/form.html
@@ -74,7 +74,7 @@
                   <svg class="user-list__icon" width="18" height="18">
                     <use xlink:href="#icon-search"></use>
                   </svg>
-                  <span class="user-list__text--hidden">Поиск по сайту</span>
+                  <span class="user-list__text user-list__text--hidden">Поиск по сайту</span>
                 </a>
               </li>
               <li class="user-list__item">
@@ -114,7 +114,7 @@
         </p>
         <form class="form__wrapper" action="https://echo.htmlacademy.ru" method="get">
           <fieldset class="form__fieldset form__type">
-            <div class="form__container container--section">
+            <div class="form__container section-container">
               <h3 class="form__title">ТИП</h3>
               <ul class="form__list form__list--type">
                 <li class="form__type-item">
@@ -139,7 +139,7 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__color">
-            <div class="form__container container--section">
+            <div class="form__container section-container">
               <h3 class="form__title">ЦВет</h3>
               <ul class="form__list form__list--color">
                 <li class="form__color-item">
@@ -200,7 +200,7 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__name">
-            <div class="form__container container--section">
+            <div class="form__container section-container">
               <h3 class="form__title form__title--name">ФИО</h3>
               <ul class="form__list form__list--name">
                 <li class="form__name-item">
@@ -219,7 +219,7 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__phone">
-            <div class="form__container container--section">
+            <div class="form__container section-container">
               <h3 class="form__title form__title--phone">тел</h3>
               <div class="form__phone-container">
                 <input class="form__user-input form__user-input--phone form__user-input--color" type="text" id="phone" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
@@ -230,7 +230,7 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__email">
-            <div class="form__container container--section">
+            <div class="form__container section-container">
               <h3 class="form__title form__title--email">E-mail</h3>
               <div class="form__email-container">
                 <input class="form__user-input form__user-input--email form__user-input--color" type="email" id="email" name="email" placeholder="Ваш Email*">
@@ -241,12 +241,12 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__info">
-            <div class="form__container container--section">
+            <div class="form__container section-container">
               <h3 class="form__title form__title--info">Доп</h3>
               <textarea class="form__info-text" id="info" name="info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </fieldset>
-          <div class="form__buttons container--section">
+          <div class="form__buttons section-container">
             <p class="form__text">*Поля обязательны для заполнения</p>
             <button class="form__button button" type="button">ОТПРАВИТЬ ЗАКАЗ</button>
           </div>
@@ -254,7 +254,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper container container--section">
+      <div class="main-footer__wrapper container section-container">
         <a class="main-footer__logo" href="index.html">
           <svg class="main-footer__icon" width="102" height="34">
             <use xlink:href="#footer-logo"></use>
