исправления после 2й защиты

--- a/source/form.html
+++ b/source/form.html
@@ -204,16 +204,16 @@
               <h3 class="form__title form__title--name">ФИО</h3>
               <ul class="form__list form__list--name">
                 <li class="form__name-item">
-                  <label class="form__parametr form__parametr--name" for="form-name__input--name">Имя:</label>
-                  <input class="form__user-input form__name-input--name" type="text" id="form-name__input--name" name="form-name__input--name" placeholder="Введите ваше имя*" required>
+                  <label class="form__parametr form__parametr--name" for="name">Имя:</label>
+                  <input class="form__user-input" type="text" id="name" name="name" placeholder="Введите ваше имя*" required>
                 </li>
                 <li class="form__name-item">
-                  <label class="form__parametr form__parametr--name" for="form-name__input--surname">Фамилия:</label>
-                  <input class="form__user-input form__name-input--surname" type="text" id="form-name__input--surname" name="form-name__input--surname" placeholder="Укажите фамилию*" required>
+                  <label class="form__parametr form__parametr--name" for="surname">Фамилия:</label>
+                  <input class="form__user-input" type="text" id="surname" name="surname" placeholder="Укажите фамилию*" required>
                 </li>
                 <li class="form__name-item">
-                  <label class="form__parametr form__parametr--name" for="form-name__input--patronymic">Отчество:</label>
-                  <input class="form__user-input form__name-input--patronymic" type="text" id="form-name__input--patronymic" name="form-name__input--patronymic" placeholder="Отчество, если желаете">
+                  <label class="form__parametr form__parametr--name" for="patronymic">Отчество:</label>
+                  <input class="form__user-input" type="text" id="patronymic" name="patronymic" placeholder="Отчество, если желаете">
                 </li>
               </ul>
             </div>
